; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-appearance.c_write_simple_string.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-appearance.c_write_simple_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REPLACEMENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*, i8*)* @write_simple_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_simple_string(i32* %0, i32* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @fz_append_byte(i32* %10, i32* %11, i8 signext 40)
  br label %13

13:                                               ; preds = %42, %4
  %14 = load i8*, i8** %7, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ult i8* %14, %15
  br i1 %16, label %17, label %48

17:                                               ; preds = %13
  %18 = load i8*, i8** %7, align 8
  %19 = call i32 @fz_chartorune(i32* %9, i8* %18)
  %20 = load i8*, i8** %7, align 8
  %21 = sext i32 %19 to i64
  %22 = getelementptr inbounds i8, i8* %20, i64 %21
  store i8* %22, i8** %7, align 8
  %23 = load i32, i32* %9, align 4
  %24 = call i32 @fz_windows_1252_from_unicode(i32 %23)
  store i32 %24, i32* %9, align 4
  %25 = load i32, i32* %9, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %17
  %28 = load i32, i32* @REPLACEMENT, align 4
  store i32 %28, i32* %9, align 4
  br label %29

29:                                               ; preds = %27, %17
  %30 = load i32, i32* %9, align 4
  %31 = icmp eq i32 %30, 40
  br i1 %31, label %38, label %32

32:                                               ; preds = %29
  %33 = load i32, i32* %9, align 4
  %34 = icmp eq i32 %33, 41
  br i1 %34, label %38, label %35

35:                                               ; preds = %32
  %36 = load i32, i32* %9, align 4
  %37 = icmp eq i32 %36, 92
  br i1 %37, label %38, label %42

38:                                               ; preds = %35, %32, %29
  %39 = load i32*, i32** %5, align 8
  %40 = load i32*, i32** %6, align 8
  %41 = call i32 @fz_append_byte(i32* %39, i32* %40, i8 signext 92)
  br label %42

42:                                               ; preds = %38, %35
  %43 = load i32*, i32** %5, align 8
  %44 = load i32*, i32** %6, align 8
  %45 = load i32, i32* %9, align 4
  %46 = trunc i32 %45 to i8
  %47 = call i32 @fz_append_byte(i32* %43, i32* %44, i8 signext %46)
  br label %13

48:                                               ; preds = %13
  %49 = load i32*, i32** %5, align 8
  %50 = load i32*, i32** %6, align 8
  %51 = call i32 @fz_append_byte(i32* %49, i32* %50, i8 signext 41)
  ret void
}

declare dso_local i32 @fz_append_byte(i32*, i32*, i8 signext) #1

declare dso_local i32 @fz_chartorune(i32*, i8*) #1

declare dso_local i32 @fz_windows_1252_from_unicode(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
